src/main/java/com/sample/sampleservice/shared/error/domain/ErrorKey.java
package com.sample.sampleservice.shared.error.domain;

import java.io.Serializable;

public interface ErrorKey extends Serializable {
    String get();
}
